--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "selmarinel/saver",
+  "name": "selmarinel/task_unit",
   "description": "TEST UNIT",
   "license": "MIT",
   "version": "2.1",
